<resources>
    <string name="hello">Hello World, GameMateActivity!</string>
    <string name="app_name">虎扑看球</string>
    <string name="app_name_1">虎扑看球-NBA英超欧冠中超</string>
    <string name="app_name_2">虎扑看NBA</string>
    <string name="title_index">虎扑看球</string>
    <string name="finished">已结束</string>
    <string name="canceled">已取消</string>
    <string name="cancel">取消</string>
    <string name="sent">发布</string>
    <string name="STR_SENT">发送</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="o1">加1</string>
    <string name="o2">加2</string>
    <string name="o3">加3</string>
    <string name="o4">加4</string>
    <string name="o5">加5</string>
    <string name="total">总分</string>
    <string name="not_start">当前比赛还没开始</string>
    <string name="jump">跳过</string>
    <string name="done">完成</string>
    <string name="str_follow_team">设置关注的球队后，您就会收到自己关注的球队的比赛情况通知。</string>
    <string name="feedback">意见反馈</string>
    <string name="recommend">精品推荐</string>
    <string name="exchange">良心推荐精品应用</string>
    <string name="check_version">检测新版本</string>
    <string name="reward">给我们打分鼓励下吧</string>
    <string name="about">关于我们</string>
    <string name="company_reg">Copyright © 2004-2014</string>
    <string name="company_name">虎扑（上海）文化传播有限公司</string>
    <string name="STR_WEST">西部</string>
    <string name="STR_EAST">东部</string>
    <string name="STR_RANK">排行</string>
    <string name="STR_TEAM">球队</string>
    <string name="STR_WIN">胜</string>
    <string name="STR_LOST">负</string>
    <string name="STR_DIF"> 胜场差</string>
    <string name="STR_PF">得分</string>
    <string name="STR_PA">失分</string>
    <string name="STR_RECENT">近况</string>
    <string name="STR_SAVE">保存</string>
    <string name="STR_TITLE_NBA_RANK">NBA排行</string>
    <string name="STR_TITLE_NBA_VIDEO">NBA视频</string>
    <string name="STR_TITLE_NBA_NEWS">NBA新闻</string>
    <string name="STR_TITLE_NBA_GAME">NBA比赛</string>
    <string name="STR_TITLE_CBA_RANK">CBA排行</string>
    <string name="STR_TITLE_CBA_VIDEO">CBA视频</string>
    <string name="STR_TITLE_CBA_NEWS">CBA新闻</string>
    <string name="STR_TITLE_CBA_GAME">CBA比赛</string>
    <string name="STR_ROTATION">旋转为横屏</string>
    <string name="STR_ROTATION_TIPS">横屏可以查看更多统计数据。（请确保您已开启自动旋转）</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refresh_last_update">最后更新于</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">更新中...</string>
    <string name="str_game_video">比赛视频</string>
    <string name="str_hot_video">推荐视频</string>
    <string name="str_next_round">下一轮</string>
    <string name="str_pre_round">上一轮</string>
    <string name="input_nick_name">输入昵称</string>
    <string name="name_commit">提交</string>
    <string name="nick_hint">只允许汉字、字母、数字，3到10个字</string>
    <string name="notity_nick_hint">壮士，发言的时候请带上你的大名吧</string>
    <string name="chat_hint">输入发言内容...</string>
    <string name="rate_hint">输入评论(选填)</string>
    <string name="no_chat">暂无发言</string>
    <string name="no_data_hint">暂无评论</string>
    <string name="no_chat_hint">轻触右上角的发言按钮成为第一个发言者</string>
    <string name="push_title">推送通知设置</string>
    <string name="push_notify">关闭后您将无法收到关注的球队的赛况及重大新闻通知，确定关闭推送通知吗？</string>
    <string name="push_open_notify"> 该功能需要开启推送通知功能，是否开启推送通知？</string>
    <string name="open_notify">打开推送通知</string>
    <string name="close_notify">关闭推送通知</string>
    <string name="no_more">没有更多评论了</string>
    <string name="group_nba">NBA</string>
    <string name="group_cba">CBA</string>
    <string name="item_game">比赛</string>
    <string name="item_vedio">视频</string>
    <string name="item_news">新闻</string>
    <string name="item_standing">排行</string>
    <string name="STR_RATE">我要评分</string>
    <string name="title_live">直播</string>
    <string name="title_report">战报</string>
    <string name="title_statistic">统计</string>
    <string name="title_chat">热线</string>
    <string name="title_chat_input">发言</string>
    <string name="title_setup">设置</string>
    <string name="title_nick_setup">设置昵称</string>
    <string name="title_cba">CBA</string>
    <string name="title_my_follow">我关注的球队</string>
    <string name="title_my_coin">我的金豆</string>
    <string name="my_coin_yue">金豆余额</string>
    <string name="title_my_pay">兑换金豆</string>
    <string name="title_notify">提示信息</string>
    <string name="title_rate">我来评分</string>
    <string name="title_rating">评分</string>
    <string name="no_rating"> 还没人评价,快来评分!</string>
    <string name="select_leagues">选择关注的联赛</string>
    <string name="select_teams">选择关注的球队</string>
    <string name="football_rank">名次</string>
    <string name="football_team">队名</string>
    <string name="football_player">球员</string>
    <string name="football_game_played">场次</string>
    <string name="football_wins">胜</string>
    <string name="football_tie">平</string>
    <string name="football_losses">负</string>
    <string name="football_scored_lost">进/失球</string>
    <string name="football_points">积分</string>
    <string name="football_scored">进球(点球)</string>
    <string name="football_assist">助攻</string>
    <string name="football_start">比赛开赛</string>
    <string name="football_end">比赛结束</string>
    <string name="football_mid">中场休息</string>
    <string name="football_shoot_out_goal">点球射失</string>
    <string name="football_missing"></string>
    <string name="follow_teams_num">已关注</string>
    <string name="more_league_text">更多</string>
    <string name="close_more_league_text">收起更多</string>
    <string name="my_account">我的帐户</string>
    <string name="my_userinfo">我的帐号</string>
    <string name="my_title">我</string>
    <string name="my_honor">我的荣誉</string>
    <string name="balance">帐户余额</string>
    <string name="go_charge">去充值</string>
    <string name="phone_login">手机号登录</string>
    <string name="hupu_login">用户名/邮箱登录</string>
    <string name="phone_bind">手机号</string>
    <string name="phone_binded">手机号</string>
    <string name="title_post_buy">购买看球币</string>
    <string name="title_bind_phone">绑定的手机号码</string>
    <string name="title_pay_method">支付方式</string>
    <string name="get_verfy">重新获取验证码</string>
    <string name="phone_bind_change">换绑手机号</string>
    <string name="no_phone_bind">暂未绑定</string>
    <string name="hint_verfy">请输入验证码</string>
    <string name="hint_phonenum">请输入手机号</string>
    <string name="hint_old_phone">请输入旧的手机号</string>
    <string name="bind">绑定</string>
    <string name="unbind">解除绑定</string>
    <string name="update_phone">更换</string>
    <string name="title_update_phone">更换手机号</string>
    <string name="charge_num">选择支付方式</string>
    <string name="kanqiu_money">看球币</string>
    <string name="gross_price">总价格</string>
    <string name="need_pay">需要支付:</string>
    <string name="oder_num">订单金额</string>
    <string name="hint_bind_phone">点击绑定你的手机</string>
    <string name="submit">提交</string>
    <string name="phone_binded_message">绑定手机后可以享受到更好的看球体验，在比赛中尽情与百万球迷互动，虎扑将保障您的信息安全。</string>
    <string name="title_display_img">2G/3G/4G网络下显示图片</string>
    <string name="submit_post">充值</string>
    <string name="confirm_bug">确认购买</string>
    <string name="title_payment_order">订单支付</string>
    <string name="cur_balance">当前余额:</string>
    <string name="favourable_charge">选择充值金额</string>
    <string name="charge_unit">元</string>
    <string name="charge_unit_wait">(1元=10个金豆)</string>
    <string name="coins_title">您将获得:</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="charge_confirm_order">充值订单</string>
    <string name="pay_method_title">网页支付</string>
    <string name="pay_method_des">可以使用支付宝、信用卡或储蓄卡付款</string>
    <string name="pay_sms_title">短信支付</string>
    <string name="pay_sms_des">直接用话费余额支付，推荐小额付款时使用</string>
    <string name="title_buy">购买</string>
    <string name="title_charge">提示</string>
    <string name="no_charge">您的金豆不足，无法参加竞猜，现在去兑换吗？</string>
    <string name="exchange_error">金豆不足，等攒够金豆再来兑换吧！</string>
    <string name="exchange_success">兑换成功！您可以在“我的奖品”查看发货进度。客服会与您联系发货相关事宜，请注意保持手机开机</string>
    <string name="no_charge1">您的金豆不足，还需兑换%d金豆，现在就去兑换吗？</string>
    <string name="no_wallet">您的钱包余额不足，还需充值%s元，现在就去充值吗？</string>
    <string name="no_charge2">您目前没有金豆，现在就去兑换吗？</string>
    <string name="not_enough_money">没有足够的金额</string>
    <string name="my_nick_name_title">我的昵称:</string>
    <string name="my_kanqiu_money_title">帐户余额:</string>
    <string name="pop_emoji">新鲜出炉的炫酷表情，再用文字发言你就out了...传神的表情胜似万语千言。</string>
    <string name="pop_wall">还在羡慕别人的上墙吗？悄悄告诉你，上墙绿色通道在这里。</string>
    <string name="amount_title">合计:</string>
    <string name="arrange_name">名次</string>
    <string name="nick_name">呢称</string>
    <string name="honour_num">次</string>
    <string name="title_add_qq">请加入QQ群:</string>
    <string name="title_contacts">联系客服</string>
    <string name="replace_phone_bind">更换手机号</string>
    <string name="copy_qq">复制QQ号</string>
    <string name="buy_vip_content">只有VIP会员才能发表情哦，VIP会员尊享表情包、昵称加V、上墙几率加倍等超值特权，仅需8金豆，使用期限30天</string>
    <string name="buy_fail_content">您确认完成支付了吗？如果支付出现问题，请加入虎扑看球官方客服QQ群105854915，会有专人帮您解决。</string>
    <string name="buy_vip">升级为VIP会员</string>
    <string name="buy_later">以后再说</string>
    <string name="buy_at_once">兑换金豆</string>
    <string name="buy_success">支付成功</string>
    <string name="buy_get_trouble">支付遇到问题</string>
    <string name="vip_subscribe">VIP会员</string>
    <string name="buy_cai">拆墙需要花费100金豆，您是否确认要拆墙？</string>
    <string name="buy_vip_title">购买VIP</string>
    <string name="title_wall_rank">上墙榜</string>
    <string name="title_guess_rank">本场竞猜排行</string>
    <string name="menu_coin_txt">我的金豆</string>
    <string name="menu_caipiao_txt">我的彩票</string>
    <string name="menu_recommend_txt">今日推荐</string>
    <string name="title_all_guess_rank">竞猜排行</string>
    <string name="all_guess_rank">总排行</string>
    <string name="gold_bean">金豆</string>
    <string name="title_coin_rank">获得金豆排行榜</string>
    <string name="no_wall_text">留言墙虚位以待，你行你就上 →</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="bind_phone_content">绑定手机立即赠送您2个金豆，使用金豆可以在比赛中给主队攒人品，还可以让你的发言在直播间上墙！</string>
    <string name="first_bind_phone_msg">赠送的2金豆将在绑定后自动充入您的帐户</string>
    <string name="rp_content">攒RP将花费1金豆，同时您有机会获得詹姆斯xx代战靴实物奖品（中奖名单将在直播中公布）。如果攒RP失败，赛后将会全额返还金豆</string>
    <string name="user_level">用户等级:</string>
    <string name="user_normal">普通用户</string>
    <string name="user_vip">VIP</string>
    <string name="vip_help">什么是VIP?</string>
    <string name="bind_now">现在绑定</string>
    <string name="charge_now">立即充值</string>
    <string name="buy_now">现在购买</string>
    <string name="input_money_msg">请您输入金额！</string>
    <string name="rp">攒人品</string>
    <string name="coin_num">竞猜的金豆数:</string>
    <string name="quiz_list_tiele">竞猜</string>
    <string name="submit_confirm">确认参与</string>
    <string name="quiz_result">开奖结果 ：</string>
    <string name="my_quiz_result">我猜 ：</string>
    <string name="wait_open">等待开奖</string>
    <string name="quiz_info"></string>
    <string name="title_send_msg">我们已发送验证码短信到您的手机</string>
    <string name="title_verfy">验证</string>
    <string name="title_input_verfy">填写验证码</string>
    <string name="title_previous">上一步</string>
    <string name="STR_NUM">号码</string>
    <string name="STR_PLAYER">球员</string>
    <string name="market_value">预计身价(欧元)</string>
    <string name="player_no_data">暂无球员名单</string>
    <string name="hupu_bind_tips">现在，您可以绑定您的虎扑看球帐号和虎扑网站(hupu.com)的帐号了，绑定之后，您可以使用一个帐号随时访问虎扑看球和虎扑网站。\n\n您只有这一次绑定机会。\n\n您在虎扑网站(hupu.com)是否有帐号？</string>
    <string name="hupu_bind_yes">有</string>
    <string name="hupu_bind_no">没有</string>
    <string name="hupu_unbind_goin">进入虎扑看球</string>
    <string name="title_hupu_bind">绑定帐号</string>
    <string name="hupu_unbind_tips">好的，以后您可以使用您的虎扑看球帐号登录虎扑网站(hupu.com)了。 </string>
</resources>