<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/layout_coach"
        layout="@layout/header_soccer_group" />

    <LinearLayout
        android:id="@+id/layout_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_coach"
        android:gravity="center" >

        <TextView
            style="@style/txt_standings_1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="3dp"
            android:text="@string/STR_NUM"
            android:textSize="@dimen/txt16" />

        <View
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:visibility="invisible" />

        <TextView
            style="@style/txt_standings_1"
            android:layout_weight="7"
            android:gravity="left"
            android:text="@string/STR_PLAYER"
            android:textSize="@dimen/txt16" />

        <TextView
            android:id="@+id/title_worth"
            style="@style/txt_standings_1"
            android:layout_weight="6"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/market_value"
            android:textSize="@dimen/txt16" />
    </LinearLayout>

    <com.hupu.games.view.PinnedHeaderListView
        android:id="@+id/list_player"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout_head"
        android:divider="@null" />

    <ProgressBar
        android:id="@+id/probar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    
    <TextView
        android:id="@+id/txt_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/res_cor8"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:text="@string/player_no_data"
        android:visibility="gone" />

</RelativeLayout>