<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        style="@style/bg_title_bar"
        android:layout_width="fill_parent" >

        <Button
            android:id="@+id/btn_back"
            style="@style/btn_back"
            android:gravity="center_horizontal"/>"

        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_title"
            android:text="@string/my_account" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/setting_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_nick_name_title"
                android:textColor="@color/res_cor2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/res_cor2"
                android:textSize="15sp" 
                />
            <ImageView 
                 android:id="@+id/img_nick"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_vip2"/>
            <TextView
                android:id="@+id/txt_vip_help"
                android:text="@string/vip_help"               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/res_cor2"
                android:textSize="15sp" 
                />
        </LinearLayout>

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_level"
                android:textColor="@color/res_cor2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_user_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/res_cor2"
                android:textSize="15sp" 
                android:text="@string/user_normal"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_kanqiu_money_title"
                android:textColor="@color/res_cor2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/res_cor2"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_go_charge"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_red2_selector"
            android:padding="2dp"
            android:shadowColor="@color/res_cor2"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/go_charge"
            android:textColor="@color/res_cor1"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>