<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        style="@style/bg_title_bar" >

        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_title"
            android:text="@string/title_my_follow" />

        <Button
            android:id="@+id/btn_done"
            style="@style/btn_right"
            android:padding="10dp"
            android:text="@string/done"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/setting_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_team"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/str_follow_team"
            android:textColor="@color/res_cor2"
            android:textSize="16sp" >
        </TextView>

        <ListView
            android:id="@+id/list_team"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_edit_text"
            android:cacheColorHint="#00000000"
            android:divider="@color/light_gray"
            android:dividerHeight="1dp"
            android:listSelector="@null" />
    </LinearLayout>

</LinearLayout>