<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/setting_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        style="@style/bg_title_bar" >


        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_title"
            android:text="@string/title_hupu_bind" />
    </RelativeLayout>


     <TextView
          android:id="@+id/txt_tips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:textColor="#ff516491"
                android:text="@string/hupu_unbind_tips"
                android:textSize="16sp" />
     
       

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:background="@drawable/btn_red2_selector"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/hupu_unbind_goin"
                android:textColor="@color/res_cor1"
                android:textSize="16sp"/>
            
        

</LinearLayout>