<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        style="@style/bg_title_bar" >

        <Button
            android:id="@+id/btn_previous"
            style="@style/btn_left1"
            android:text="@string/title_previous" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_title"
            android:text="@string/select_teams" />

        <Button
            android:id="@+id/btn_done"
             style="@style/btn_right"
             android:text="@string/done"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/follow_team_bg"
        android:orientation="vertical" >

        <ExpandableListView
            android:id="@+id/list_team"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:childDivider="#00000000"
            android:divider="#00000000"
            android:dividerHeight="0dp"
            android:drawSelectorOnTop="false"
            android:listSelector="#00000000"
            android:scrollingCache="false" />
        <!--
        <TextView
            android:id="@+id/txt_team"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/str_follow_team"
            android:textColor="@color/follow_title_text_color"
            android:textSize="12sp" >
        </TextView>
        -->

    </LinearLayout>

</LinearLayout>