<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
      android:background="@color/setting_bg" >

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        style="@style/bg_title_bar"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/btn_back"
            style="@style/btn_back" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_title"
            android:text="@string/about" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_about_logo"
             />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textSize="46px"
            android:textStyle="bold"
             android:textColor="@color/res_cor2"
             />

        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="v4.4.0"
            android:textSize="30px"
             android:textColor="@color/res_cor2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_reg"
            android:textSize="30px" 
             android:textColor="@color/res_cor2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="30px"
             android:textColor="@color/res_cor2" />
    </LinearLayout>

</RelativeLayout>